Fix login spacing issues

--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -2,7 +2,6 @@ html {
   background-image: url("../photos/REAL-background-MERN.jpg");
   background-size: cover;
   font-family: 'Roboto', sans-serif;
-  background-color: black !important;
 }
 
 body {
